--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "npm run clean && npm run build-babel",
     "test": "test",
     "dev": "nodemon build/index.js --exec babel-node",
-    "start": "npm run build && node build/index.js"
+    "start": "npm run build && node build/index.js",
+    "br": "browserify src/images.js -t babelify --outfile src/tests/bundle.js"
   },
   "repository": {
     "type": "git",
@@ -44,6 +45,15 @@
     "@babel/node": "^7.2.2",
     "@babel/plugin-transform-runtime": "^7.4.3",
     "@babel/preset-env": "^7.4.2",
+    "babelify": "^10.0.0",
     "nodemon": "^1.18.10"
-  }
+  },
+  "transform": [
+    [
+      "babelify",
+      {
+        "comments": false
+      }
+    ]
+  ]
 }
